add comments to understand every functions and step of development - part 1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Ne pas oublier d'ajouter DANS L'ORDRE PREDEFINI les fichiers créés -->
     <script src="scripts/config.js"></script>
     <script src="scripts/script.js"></script>
     <script src="scripts/main.js"></script>
